--- a/lib/templates/header.js.erb
+++ b/lib/templates/header.js.erb
@@ -7,7 +7,7 @@
   <%- end -%>
   analytics.load();
   analytics.ready(function () {
-    if(_aopts.exclude) {
+    if(_aopts.exclude && _aopts.exclude.length > 0) {
       _aopts.providers = {'All': false}
       jQuery.each(analytics.Integrations, function(key, value) {
         _aopts.providers[key] = _aopts.exclude.indexOf(key) == -1
